2006-04-09  Neal H. Walfield  <neal@gnu.org>

	* event-list.c (struct _GtkEventList): Add fields date and tm.
	(date_cell_data_func): Interpret user data as the associated
	GtkEventList.  Provide more descriptive dates.
	(gtk_event_list_init): Pass EVENT_LIST as user data to
	date_cell_data_func.
	(gtk_event_list_reload_events): Save the time in EVENT_LIST->DATE
	and EVENT_LIST->TM.  Don't just look for the end of the next
	event: find the first status change.

2006-04-08  Neal H. Walfield  <neal@gnu.org>

	* gtkdatesel.c (get_max_day_width): Remove dead code.

2006-04-08  Neal H. Walfield  <neal@gnu.org>

	* event-list.h: New file.
	* event-list.c: New file.
	* Makefile.am (gpe_calendar_SOURCES): Add event-list.c and
	event-list.h.
	* day_view.c: Include "event-list.h".
	(struct _GtkDayView): New field, event_list.
	(day_view_update): If FORCE is true, cause DAY_VIEW->EVENT_LIST
	to reload.
	(gtk_day_view_new): Initialize DAY_VIEW->EVENT_LIST.  Add
	DAY_VIEW->EVENT_LIST just below DAY_VIEW->CALENDAR.
	* week_view.c: Include "event-list.h".
	(struct _GtkWeekView): New field, event_list.
	(week_view_update): If FORCE is true, cause WEEK_VIEW->EVENT_LIST
	to reload.
	(gtk_week_view_new): Initialize WEEK_VIEW->EVENT_LIST.  Add
	WEEK_VIEW->EVENT_LIST just below WEEK_VIEW->CALENDAR.

2006-04-07  Florian Boor  <florian@kernelconcepts.de>

    * event-ui.c (build_edit_event_window): Nicer looking layout: replace 
      boxes with table.
    
2006-04-06  Neal H. Walfield  <neal@gnu.org>

	* event-cal.h: New file.
	* event-cal.c: New file.
	* Makefile.am (gpe_calendar_SOURCES): Add event-cal.c and
	event-cal.h.
	* day_view.c: Include "event-cal.h".
	(day_view_update): If force is true, make DAY_VIEW->CALENDAR
	reread the event database.
	* week_view.c: Include "event-cal.h".
	(week_view_update): If force is true, make WEEK_VIEW->CALENDAR
	reread the event database.
	(gtk_week_view_new): Make a GtkEventCal, not a GtkCalendar.

2006-04-06  Neal H. Walfield  <neal@gnu.org>
